[tool.poetry]
package-mode = false
name = "bleurt-eval"
version = "0.1.0"
description = "Bleurt evaluation score"
authors = ["Luis Azevedo <luis.azevedo@sabre.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
connexion = {version = "^2.14.2", extras = ["swagger-ui"]}
swagger-ui-bundle = ">=0.0.2"
python-dateutil = ">=2.6.0"
setuptools = ">=21.0.0"
Flask = "2.1.1"
evaluate = "^0.4.2"
bleurt = {git = "https://github.com/google-research/bleurt.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
